Se agrega el header de la pagina

--- a/bbc.html
+++ b/bbc.html
@@ -61,5 +61,15 @@
 				<button id="search-button" type="submit" class="icono fa fa-search"></button>
 			</div>
     	</div>
+    	<div class="clear"></div>
+    	<div id="head-nav">
+    		<div class="menu-bar">
+    			<a id="inicio" href="#"><img src="imagenes/news-light.png" alt=""></a>
+    			<a id="location-news" href="#">Find local news &nbsp;<i class="fa fa-map-marker" aria-hidden="true"></i></a>
+    		</div>
+    		<div>
+    			
+    		</div>
+    	</div>
     </body>
 </html>
